# ChangeLog for net-misc/asterisk-sounds
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.3 2005/05/10 12:51:18 dholm Exp $

  10 May 2005; David Holm <dholm@gentoo.org> asterisk-sounds-1.0.7.ebuild:
  Added to ~ppc.

*asterisk-sounds-1.0.7 (21 Mar 2005)

  21 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.7.ebuild:
  Version bump.

*asterisk-sounds-1.0.6 (10 Mar 2005)

  10 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.6.ebuild:
  Initial import. This has been splitted from the asterisk ebuild.
