@@ -1,6 +1,8 @@
-MD5 94fdb5f846454d052cb0f49b6692d865 ChangeLog 638
-MD5 b6eb38fbfd759adb474cc4e90d9e4c57 asterisk-sounds-1.0.6.ebuild 617
+MD5 64a4d5f78bcdf4bbeec340c2e80bcfc8 asterisk-sounds-1.0.7.ebuild 796
 MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
-MD5 1de6cadd3ceccf5fed4519b3449b8603 asterisk-sounds-1.0.7.ebuild 623
-MD5 08e0799d2792b7833b850ee29bcb5bea files/digest-asterisk-sounds-1.0.6 74
+MD5 29f7b0faacd48c7c48b881e5f849e775 asterisk-sounds-1.0.8.ebuild 796
+MD5 2a0bcaada939d41e13be18a7abd9cb10 ChangeLog 869
+MD5 25b27a21f49dcc3c0ab738d0f0e9fae1 asterisk-sounds-1.0.6.ebuild 796
 MD5 52b41306e47aa47d6c7825684c715017 files/digest-asterisk-sounds-1.0.7 74
+MD5 08e0799d2792b7833b850ee29bcb5bea files/digest-asterisk-sounds-1.0.6 74
+MD5 0e381530d5433423afd7cea188ce8043 files/digest-asterisk-sounds-1.0.8 74
