@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.7.ebuild,v 1.2 2005/05/10 12:51:18 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.7.ebuild,v 1.3 2005/06/25 09:53:34 stkn Exp $
 
 IUSE=""
 
@@ -17,7 +17,13 @@ KEYWORDS="~x86 ~sparc ~hppa ~amd64 ~ppc"
 DEPEND="net-misc/asterisk"
 
 src_install() {
-	emake -j1 DESTDIR=${D} install || die "Make install failed"
+	make DESTDIR=${D} install || die "Make install failed"
 
 	dodoc README.txt sounds-extra.txt
+
+	# fix permissions
+	if has_version ">=net-misc/asterisk-1.0.5-r2"; then
+		chown -R asterisk:asterisk ${D}/var/lib/asterisk
+		chmod -R u=rwX,g=rX,o=     ${D}/var/lib/asterisk
+	fi
 }
