@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.6.ebuild,v 1.2 2005/06/25 09:53:34 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.8.ebuild,v 1.1 2005/06/25 09:53:34 stkn Exp $
 
 IUSE=""
 
@@ -12,12 +12,12 @@ S=${WORKDIR}/${P}
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~sparc ~hppa ~amd64"
+KEYWORDS="~x86 ~sparc ~hppa ~amd64 ~ppc"
 
 DEPEND="net-misc/asterisk"
 
 src_install() {
-	emake -j1 DESTDIR=${D} install || die "Make install failed"
+	make DESTDIR=${D} install || die "Make install failed"
 
 	dodoc README.txt sounds-extra.txt
 
