@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/asterisk-sounds
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.3 2005/05/10 12:51:18 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.4 2005/06/25 09:53:34 stkn Exp $
+
+*asterisk-sounds-1.0.8 (25 Jun 2005)
+
+  25 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
+  +asterisk-sounds-1.0.8.ebuild, asterisk-sounds-1.0.6.ebuild,
+  asterisk-sounds-1.0.7.ebuild:
+  Version bump. Added non-root permission fixes.
 
   10 May 2005; David Holm <dholm@gentoo.org> asterisk-sounds-1.0.7.ebuild:
   Added to ~ppc.
